2007-11-18  Michael Natterer  <mitch@gimp.org>

	* app/gimp-log.[ch]: changed to work with different
	compiler-specific ways of doing macro varargs also cope with no
	macro vararg support at all. Pointed out by Hans Breuer.

2007-11-18  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_canvas_tool_events): improve debug output.

2007-11-17  Sven Neumann  <sven@gimp.org>

	* app/base/base-utils.c (get_physical_memory_size): added a cast
	to avoid an integer overflow on 32bit machines.

	* tools/gimptool.c: minor cleanup, hopefully not breaking anything.

2007-11-17  Sven Neumann  <sven@gimp.org>

	* app/base/base-utils.[ch]: changed to get_physical_memory_size()
	and added an implementation for POSIX.2 platforms.

2007-11-17  Tor Lillqvist  <tml@novell.com>

	* tools/gimptool.c: Ignore --msvc-syntax unless on Windows. Put
	some Windows-only stuff inside ifdef.

2007-11-16  Tor Lillqvist  <tml@novell.com>

	Use the gimptool program on Unix, too, instead of the gimptool
	script.

	* configure.in
	* Makefile.am: Drop gimptool script and gimptool-win32.c(.in)

	* tools/gimptool.c
	* tools/Makefile.am: Move gimptool-win32.c.in here and call it
	just gimptool.c. Build and install on all platforms.

	* tools/gimptool.c: Change accordingly.

	* doc/gimptool.1.in: Document the --msvc-syntax option.
	
2007-11-16  Michael Natterer  <mitch@gimp.org>

	* app/gimp-log.[ch]: add HELP log domain.

	* app/widgets/gimphelp.c: port debug output to GIMP_LOG() and
	improve it.

2007-11-16  Tor Lillqvist  <tml@novell.com>

	* app/base/base-utils.c
	* app/base/base-utils.h (get_physical_memory_size_megabytes): New
	function that Sven asked for. Somebody please fill in Unix
	implementation(s). Feel free to change the name, change to return
	as bytes in a gint64, etc.

2007-11-16  Michael Natterer  <mitch@gimp.org>

	* app/base/temp-buf.c
	* app/base/tile-manager.c
	* app/core/gimpobject.c: accept NULL in all get_memsize() functions.
